[package]
name = "guessing_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

# opt−level 设置控制Rust 会对代码进行何种程度的优化
# 这个配置的值从0 到3。越高的优化级别需要更多的时间编译
[profile.dev]
opt-level = 0
[profile.release]
opt-level = 3